@@ -10,6 +10,7 @@ v0.7 - Pending
 	+ --toggle argument to minimize to tray or show (requires D-Bus)
 	+ Add french translation [Floréal M]
 	+ Additional shortcuts (see docs)
+	+ Bug: repeat/shuffle isn't updated if mpd is restarted
 	+ Bug: Unable to delete multiple playlists at once
 	+ Bug: Crash when playing ogg streams [patch]
 
